Fix z-index to avoid overlay errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ footer > * > div {
 header {
   position: sticky;
   top:0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .card > div:first-child {
@@ -116,6 +116,7 @@ header {
   cursor: pointer;
 
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .discount-tenable {
